# auto-config

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml  releaserc.toml
.github/workflows/: coverage.yml  python-publish.yml
auto_config/: __init__.py  __main__.py  device.py  field.py  service.py  utils.py
auto_config/experimental/: downgrade_python.py
auto_config/generator/: __init__.py  ansible_hosts.py  base.py  caddy_file.py  dns_config.py  ssh_hosts.py
auto_config/modules/: generate.py  update_dnspod.py
tests/: test_device.py  test_generator.py  test_service.py
