[project]
name = "auto-config"
dynamic = ["version"]
description = "auto config for my personal devices"
authors = [
    {name = "Zhan Rongrui", email = "2742392377@qq.com"},
]
dependencies = [
    "pydantic>=2.5.3",
    "typer[all]>=0.9.0",
    "loguru>=0.7.2",
    "toml>=0.10.2",
    "auto-token>=0.0.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://pypi.org/project/auto-config"
Repository = "https://github.com/zrr1999/auto-config.git"

[project.scripts]
auto-config = "auto_config.__main__:app"

[tool.pdm.version]
source = "scm"
write_to = "auto_config/__version__.py"
write_template = "__version__ = '{}'"

[tool.pdm.dev-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "coverage",
]

[tool.pdm.build]
includes = ["auto_config"]

[tool.ruff]
line-length = 120
src = ["auto_config", "tests"]
exclude = ["tests/fixtures"]
target-version = "py39"

[tool.ruff.lint]
select = [
  "F",
  "SIM",
  "UP",
  "FA",   # flake8-annotations
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "E",    # pycodestyle
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]

[tool.ruff.lint.isort]
known-first-party = ["auto_config"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I002"]

[build-system]
requires = ["pdm-backend", "pdm-pyfuture"]
build-backend = "pdm.backend"
