[project]
name = "auto-config"
dynamic = ["version"]
description = "auto config for my personal devices"
authors = [
    {name = "Zhan Rongrui", email = "2742392377@qq.com"},
]
dependencies = [
    "pydantic>=2.5.3",
    "typer>=0.12.0",
    "loguru>=0.7.2",
    "toml>=0.10.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Typing :: Typed",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]


[project.urls]
Homepage = "https://pypi.org/project/auto-config"
Repository = "https://github.com/zrr1999/auto-config.git"

[project.scripts]
auto-config = "auto_config.__main__:app"

[tool.pdm.version]
source = "scm"
write_to = "auto_config/__version__.py"
write_template = "__version__ = '{}'"

[tool.pdm.build]
includes = ["auto_config"]

[tool.uv]
dev-dependencies = [
    "ruff",
    "xdoctest",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-codspeed",
]

[tool.ruff]
line-length = 100
src = ["auto_config", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["F", "I", "B", "C4", "PGH", "RUF", "W", "YTT"]
ignore = ["F841", "PGH003"]

[tool.ruff.lint.isort]
known-first-party = ["auto_config"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I002"]

[build-system]
requires = ["pdm-backend", "pdm-pyfuture"]
build-backend = "pdm.backend"
